@@ -416,7 +416,7 @@ to perltidy.
 
 =head1 VERSION
 
-This man page documents Perl::Tidy version 20130806.
+This man page documents Perl::Tidy version 20130922.
 
 =head1 LICENSE
 
